@@ -24,10 +24,11 @@ my %WriteMakefileArgs = (
     "MooseX::Types::Moose" => 0
   },
   "TEST_REQUIRES" => {
-    "Dist::Zilla::Util::Test::KENTNL" => "1.003002",
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
+    "Path::Tiny" => 0,
     "Test::DZil" => 0,
+    "Test::Differences" => 0,
     "Test::More" => "0.89",
     "Test::Requires" => 0
   },
@@ -41,13 +42,14 @@ my %WriteMakefileArgs = (
 my %FallbackPrereqs = (
   "Dist::Zilla::Role::PrereqSource" => 0,
   "Dist::Zilla::Util::ConfigDumper" => 0,
-  "Dist::Zilla::Util::Test::KENTNL" => "1.003002",
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "Moose" => 0,
   "Moose::Util::TypeConstraints" => 0,
   "MooseX::Types::Moose" => 0,
+  "Path::Tiny" => 0,
   "Test::DZil" => 0,
+  "Test::Differences" => 0,
   "Test::More" => "0.89",
   "Test::Requires" => 0
 );
