@@ -1,8 +1,18 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.006002
+ [Added / test recommends]
+ - Path::Tiny 0.058
+
+ [Added / test requires]
+ - Path::Tiny
+ - Test::Differences
+
  [Changed / develop suggests]
  - Dist::Zilla::PluginBundle::Author::KENTNL 2.025002 → 2.025010
+
+ [Removed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003002
 
 0.006001 2015-10-03T10:40:00Z
  [Added / develop requires]
