@@ -8,18 +8,20 @@ use Test::More;
 # CREATED: 03/23/14 19:41:51 by Kent Fredric (kentnl) <kentfredric@gmail.com>
 # ABSTRACT: Basic interface test
 
-use Test::DZil qw(simple_ini);
-use Dist::Zilla::Util::Test::KENTNL 1.003002 qw( dztest );
+use Test::DZil qw(simple_ini Builder);
+use Path::Tiny qw( path );
+use Test::Differences qw( eq_or_diff );
 
-my $test = dztest();
-my @ini;
-
-push @ini, [ 'Prereqs', { 'Foo' => 1 } ];
-push @ini, [ 'Prereqs::Soften', { 'module' => 'Foo', 'to_relationship' => 'none', copy_to => 'develop.requires' } ];
-push @ini, ['GatherDir'];
-
-$test->add_file( 'dist.ini', simple_ini(@ini) );
-$test->add_file( 'lib/E.pm', <<'EO_EPM');
+my $tzil = Builder->from_config(
+  { dist_root => 'invalid' },
+  {
+    add_files => {
+      path( 'source', 'dist.ini' ) => simple_ini(
+        [ 'Prereqs', { 'Foo' => 1 } ],                                                                               #
+        [ 'Prereqs::Soften', { 'module' => 'Foo', 'to_relationship' => 'none', copy_to => 'develop.requires' } ],    #
+        ['GatherDir'],                                                                                               #
+      ),
+      path( 'source', 'lib', 'E.pm' ) => <<'EO_EPM',
 use strict;
 use warnings;
 
@@ -31,10 +33,19 @@ use Moose;
 with 'Dist::Zilla::Role::Plugin';
 
 1;
+
 EO_EPM
 
-$test->build_ok;
-$test->prereqs_deeply(
+    }
+  }
+);
+
+$tzil->chrome->logger->set_debug(1);
+
+$tzil->build;
+
+eq_or_diff(
+  $tzil->prereqs->as_string_hash,
   {
     develop => { requires => { 'Foo' => '1' } },
   }
