@@ -8,17 +8,21 @@ use Test::More;
 # CREATED: 03/23/14 19:41:51 by Kent Fredric (kentnl) <kentfredric@gmail.com>
 # ABSTRACT: Basic interface test
 
-use Test::DZil qw(simple_ini);
-use Dist::Zilla::Util::Test::KENTNL 1.003002 qw( dztest );
-my $test = dztest();
-my @ini;
+use Test::DZil qw(simple_ini Builder);
+use Path::Tiny qw( path );
+use Test::Differences qw( eq_or_diff );
 
-push @ini, [ 'Prereqs', { 'Foo' => 1 } ];
-push @ini, [ 'Prereqs::Soften', { 'module' => 'Foo', 'copy_to' => 'develop', to_relationship => 'none' } ];
-push @ini, ['GatherDir'];
+my $tzil = Builder->from_config(
+  { dist_root => 'invalid' },
+  {
+    add_files => {
+      path( 'source', 'dist.ini' ) => simple_ini(
 
-$test->add_file( 'dist.ini', simple_ini(@ini) );
-$test->add_file( 'lib/E.pm', <<'EO_EPM');
+        [ 'Prereqs', { 'Foo' => 1 } ],                                                                      #
+        [ 'Prereqs::Soften', { 'module' => 'Foo', 'copy_to' => 'develop', to_relationship => 'none' } ],    #
+        ['GatherDir'],                                                                                      #
+      ),
+      path( 'source', 'lib', 'E.pm' ) => <<'EO_EPM',
 use strict;
 use warnings;
 
@@ -30,11 +34,18 @@ use Moose;
 with 'Dist::Zilla::Role::Plugin';
 
 1;
+
 EO_EPM
+
+    }
+  }
+);
+
+$tzil->chrome->logger->set_debug(1);
 
 my $e = do {
   local $@;
-  eval { $test->build };
+  eval { $tzil->build };
   $@;
 };
 ok( $e, "An exception was thrown due to invalid arguments" );
