@@ -1,9 +1,12 @@
 Release history for Dist-Zilla-Plugin-Prereqs-Soften
 
 {{$NEXT}}
+ - Remove usage of dztest. Ironic, seeing this module is where I invented that. So many regrets.
+
  [Dependencies::Stats]
  - Dependencies changed since 0.006001, see misc/*.deps* for details
  - develop: (suggests: ↑1)
+ - test: +2 -1 (recommends: +1)
 
 0.006001 2015-10-03T10:40:00Z f0f58f0
  [Bugfix]
